k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hls-iot
  labels:
    app: hls-iot-service
    environment: production
