k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hls-iot-service
  namespace: hls-iot
  labels:
    app: hls-iot-service
spec:
  type: ClusterIP
  selector:
    app: hls-iot-service
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  namespace: hls-iot
  labels:
    app: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
    protocol: TCP
